--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,279 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', system-ui;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Track */
+::-webkit-scrollbar-track {
+  background: white;
+  border: 1px solid #8080802f;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #e6e6e6;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ccc;
+}
+
+.shadows {
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+@layer base {
+  .h1 {
+    @apply text-[49px] leading-tight md:text-[65px] md:leading-[1.3] mb-4 font-bold;
   }
-  a:hover {
-    color: #747bff;
+
+  .h2 {
+    @apply text-[41px] leading-tight md:text-[49px] md:leading-[1.3] mb-4 font-bold;
   }
-  button {
-    background-color: #f9f9f9;
+
+  .h3 {
+    @apply text-[24px] leading-tight md:text-[28px] md:leading-[1.3] mb-4 font-bold;
+  }
+
+  .h4 {
+    @apply text-[16px] md:text-[17px] mb-2 font-bold;
+  }
+
+  .h5 {
+    @apply text-[14px] md:text-[15px] mb-1 font-bold;
+  }
+
+  p {
+    @apply leading-[1.3] text-[14px] text-gray-50;
+  }
+}
+
+@layer utilities {
+  .active-link {
+    @apply relative after:w-2/3 after:h-[2px] after:rounded-full after:bg-black after:absolute after:-bottom-2 after:left-0;
+  }
+
+  .btn-white {
+    @apply medium-14 bg-white text-tertiary ring-1 ring-white px-7 py-2 rounded-lg;
+  }
+
+  .btn-dark {
+    @apply medium-14 bg-gray-950 text-white ring-1 ring-gray-950 px-7 py-2 rounded-lg;
+  }
+
+  .btn-light {
+    @apply medium-14 bg-primary ring-1 ring-primary px-7 py-2 rounded-lg transition-all duration-300;
+  }
+
+  .btn-outline {
+    @apply medium-14 bg-white ring-1 ring-primary px-7 py-2 rounded-lg hover:bg-primary transition-all duration-300;
+  }
+
+  .btn-secondary {
+    @apply medium-14 bg-secondary ring-1 ring-secondary text-white px-7 py-2 rounded-lg;
+  }
+
+  .max-padd-container {
+    @apply mx-auto max-w-[2140px] px-6 lg:px-12;
+  }
+
+  .flexCenter {
+    @apply flex items-center justify-center;
+  }
+
+  .flexBetween {
+    @apply flex items-center justify-between;
+  }
+
+  .flexStart {
+    @apply flex items-center justify-start;
+  }
+
+  .flexEnd {
+    @apply flex items-center justify-end;
+  }
+
+  /* FONTS */
+  .regular-64 {
+    @apply text-[64px] font-[400] leading-[120%];
+  }
+
+  .regular-52 {
+    @apply text-[52px] font-[400] leading-[120%];
+  }
+
+  .regular-48 {
+    @apply text-[48px] font-[400] leading-[120%];
+  }
+
+  .regular-40 {
+    @apply text-[40px] font-[400] leading-[120%];
+  }
+
+  .regular-32 {
+    @apply text-[32px] font-[400];
+  }
+
+  .regular-28 {
+    @apply text-[28px] font-[400];
+  }
+
+  .regular-24 {
+    @apply text-[24px] font-[400];
+  }
+
+  .regular-22 {
+    @apply text-[22px] font-[400];
+  }
+
+  .regular-20 {
+    @apply text-[20px] font-[400];
+  }
+
+  .regular-18 {
+    @apply text-[18px] font-[400];
+  }
+
+  .regular-16 {
+    @apply text-[16px] font-[400];
+  }
+
+  .regular-15 {
+    @apply text-[15px] font-[400];
+  }
+
+  .regular-14 {
+    @apply text-[14px] font-[400];
+  }
+
+  .medium-64 {
+    @apply text-[64px] font-[500] leading-[120%];
+  }
+
+  .medium-52 {
+    @apply text-[52px] font-[500] leading-[120%];
+  }
+
+  .medium-48 {
+    @apply text-[48px] font-[500] leading-[120%];
+  }
+
+  .medium-40 {
+    @apply text-[40px] font-[500] leading-[120%];
+  }
+
+  .medium-36 {
+    @apply text-[36px] font-[500];
+  }
+
+  .medium-32 {
+    @apply text-[32px] font-[500];
+  }
+
+  .medium-28 {
+    @apply text-[28px] font-[500];
+  }
+
+  .medium-24 {
+    @apply text-[24px] font-[500];
+  }
+
+  .medium-22 {
+    @apply text-[22px] font-[500];
+  }
+
+  .medium-20 {
+    @apply text-[20px] font-[500];
+  }
+
+  .medium-18 {
+    @apply text-[18px] font-[500];
+  }
+
+  .medium-16 {
+    @apply text-[16px] font-[500];
+  }
+
+  .medium-15 {
+    @apply text-[15px] font-[500];
+  }
+
+  .medium-14 {
+    @apply text-[14px] font-[500];
+  }
+
+  .bold-88 {
+    @apply text-[88px] font-[700] leading-[120%];
+  }
+
+  .bold-64 {
+    @apply text-[64px] font-[700] leading-[120%];
+  }
+
+  .bold-52 {
+    @apply text-[52px] font-[700] leading-[120%];
+  }
+
+  .bold-48 {
+    @apply text-[48px] font-[700] leading-[120%];
+  }
+
+  .bold-44 {
+    @apply text-[44px] font-[700] leading-[120%];
+  }
+
+  .bold-40 {
+    @apply text-[40px] font-[700] leading-[120%];
+  }
+
+  .bold-36 {
+    @apply text-[36px] font-[700] leading-[120%];
+  }
+
+  .bold-32 {
+    @apply text-[32px] font-[700] leading-[120%];
+  }
+
+  .bold-28 {
+    @apply text-[28px] font-[700] leading-[120%];
+  }
+
+  .bold-24 {
+    @apply text-[24px] font-[700] leading-[120%];
+  }
+
+  .bold-22 {
+    @apply text-[22px] font-[700];
+  }
+
+  .bold-20 {
+    @apply text-[20px] font-[700];
+  }
+
+  .bold-18 {
+    @apply text-[18px] font-[700];
+  }
+
+  .bold-16 {
+    @apply text-[16px] font-[700];
+  }
+
+  .bold-15 {
+    @apply text-[15px] font-[700];
+  }
+  .bold-14 {
+    @apply text-[14px] font-[700];
   }
 }
